--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "psr-4": {
             "Aws\\": "src/"
         },
-        "files": ["src/functions.php"]
+        "files": ["src/functions_include.php"]
     },
     "autoload-dev": {
         "psr-4": {
